add: oauth file

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,6 +1,9 @@
 {{>layout/header}}
-
-<h1>스프링부트로 시작하는 웹 서비스 Ver.2.8</h1>
+<div class="navi" style="margin: 50px 0 0 35px;">
+    <a href="/map">코로나 지도</a>
+    <a href="">게시판</a>
+</div>
+<h1>코로나 자유게시판</h1>
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
